--- a/src/style.css
+++ b/src/style.css
@@ -93,6 +93,18 @@ hr {
   border: 0;
 }
 
+figure {
+  margin-top: var(--spacing-8);
+  margin-bottom: var(--spacing-8);
+  text-align: center;
+}
+
+figcaption {
+  color: var(--color-text-light);
+  font-size: var(--fontSize-0);
+  font-style: italic;
+}
+
 /* Heading */
 
 h1,
