--- a/src/style.css
+++ b/src/style.css
@@ -94,8 +94,7 @@ hr {
 }
 
 figure {
-  margin-top: var(--spacing-8);
-  margin-bottom: var(--spacing-8);
+  margin: var(--spacing-8) var(--spacing-4);
   text-align: center;
 }
 
@@ -103,6 +102,11 @@ figcaption {
   color: var(--color-text-light);
   font-size: var(--fontSize-0);
   font-style: italic;
+  margin-top: var(--spacing-2);
+}
+
+figcaption.left {
+  text-align: left;
 }
 
 /* Heading */
