--- a/src/style.css
+++ b/src/style.css
@@ -94,7 +94,8 @@ hr {
 }
 
 figure {
-  margin: var(--spacing-8) var(--spacing-4);
+  margin: var(--spacing-8) auto;
+  max-width: calc(100% - 2 * var(--spacing-4));
   text-align: center;
 }
 
