Fix word-break of Korean titles and captions
- and set the default language property as Korean

--- a/src/style.scss
+++ b/src/style.scss
@@ -340,6 +340,16 @@ a:focus {
   margin-bottom: var(--spacing-10);
 }
 
+/* line break */
+
+:lang(ko) {
+  // Don't break Korean words in titles and captions
+  h1, h2, h3, h4, h5, h6,
+  figcaption {
+    word-break: keep-all;
+  }
+}
+
 /* Media queries */
 
 @media (max-width: 42rem) {
